comment support, removed json shenanigans, refactored clang bindings